finalized html of login

--- a/gainzTracker/src/app/forget-password/forget-password.component.scss
+++ b/gainzTracker/src/app/forget-password/forget-password.component.scss
@@ -10,6 +10,14 @@
       width: 100%;
       display: flex;
       justify-content: center;
+      position: relative;
+
+      mat-icon{
+        position: absolute;
+        left: 4px;
+        top: 4px;
+        color: black;
+      }
     }
 
     mat-card-content {
@@ -23,26 +31,11 @@
         width: 100%;
       }
 
-      a{
-        width: 100%;
-        margin-bottom: 8px;
-        display: flex;
-        justify-content: center;
-        text-decoration: none;
-      }
-
       button{
         width: 100%;
         margin-bottom: 8px;
       }
-
-      span{
-        cursor: pointer;
-        margin-top: 16px;
-        &:hover{
-          border-bottom: 1px solid black;
-        }
-      }
     }
   }
 }
+
