--- a/gainzTracker/src/app/app.component.scss
+++ b/gainzTracker/src/app/app.component.scss
@@ -1,3 +1,20 @@
-:root{
+:host{
   overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+
+  .startScreenWrapper{
+    position: absolute;
+    margin: auto;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding: 16px;
+    height: fit-content;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
