--- a/gainzTracker/src/app/sign-up/sign-up.component.scss
+++ b/gainzTracker/src/app/sign-up/sign-up.component.scss
@@ -10,6 +10,14 @@
       width: 100%;
       display: flex;
       justify-content: center;
+      position: relative;
+
+      mat-icon{
+        position: absolute;
+        left: 4px;
+        top: 4px;
+        color:black
+      }
     }
 
     mat-card-content {
@@ -21,14 +29,6 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-      }
-
-      a{
-        width: 100%;
-        margin-bottom: 8px;
-        display: flex;
-        justify-content: center;
-        text-decoration: none;
       }
 
       button{
