--- a/gainzTracker/src/app/forget-password/forget-password.component.html
+++ b/gainzTracker/src/app/forget-password/forget-password.component.html
@@ -4,10 +4,16 @@
     <mat-card-title> Forgot Password </mat-card-title>
   </mat-card-header>
   <mat-card-content>
-    <mat-form-field>
-      <mat-label>E-Mail</mat-label>
-      <input matInput />
-    </mat-form-field>
-    <button mat-raised-button>Send</button>
+    <form #forgetPasswordForm="ngForm">
+      <mat-form-field>
+        <mat-label>E-Mail</mat-label>
+        <input id="email" required type="email" name="email" pattern="[A-Za-z0-9._%-]+@[A-Za-z0-9._%-]+\\.[a-z]{2,3}"  minlength="3" #emailInput="ngModel" [(ngModel)]="forgetPasswordEmail" matInput />
+      </mat-form-field>
+      <mat-error *ngIf="emailInput.invalid && (emailInput.touched || emailInput.dirty)">
+        <span *ngIf="emailInput.errors?.['pattern']">Mindestens drei Zeichen</span>
+        <span *ngIf="emailInput.errors?.['required']">Fehlender Wert</span>
+      </mat-error>
+      <button type="submit" [disabled]="forgetPasswordForm.invalid" mat-raised-button>Send</button>
+    </form>
   </mat-card-content>
 </mat-card>
