--- a/gainzTracker/src/app/login/login.component.scss
+++ b/gainzTracker/src/app/login/login.component.scss
@@ -17,22 +17,26 @@
       flex-direction: column;
       align-items: center;
 
-      mat-form-field {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-      }
+      form{
+       width: 236px;
 
-      a{
-        width: 100%;
-        margin-bottom: 8px;
-        display: flex;
-        justify-content: center;
-        text-decoration: none;
+        mat-form-field {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+        }
+
+        a{
+          width: 100%;
+          margin-bottom: 8px;
+          display: flex;
+          justify-content: center;
+          text-decoration: none;
+        }
       }
 
       button{
-        width: 100%;
+        width: 236px;
         margin-bottom: 8px;
       }
 
