--- a/gainzTracker/src/styles.scss
+++ b/gainzTracker/src/styles.scss
@@ -10,5 +10,8 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
-
+.text-danger{
+  color: red;
+  font-size: 12px;
+}
 
